updating Statics view and css adding all links display

--- a/LinkShortener/Views/Rout/Statics.cshtml
+++ b/LinkShortener/Views/Rout/Statics.cshtml
@@ -1,90 +1,33 @@
 ﻿@model StaticModel
 
 @{
-    Layout = null;
+    Layout = "_MyLayout";
 }
 
-<h2>title</h2>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>داریان - @Model.Link.MainLink</title>
-    <meta name="keywords" content="لینک, کوتاه,فشرده,خلاصه,کوتاه سازی,لینک سازی,link,link shortener,ls1,لینک دات آی آر,داریان,darian,darian mh,سئو" />
-    <meta name="description" content="لینک دات آی آر یک محصول از داریان است.محصولی ساده و روان برای خلاصه سازی لینک های شما." />
-    <link href="~/lib/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet" />
-    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/css/HomeCss.css" rel="stylesheet" />
-</head>
-<body dir="rtl">
-
-    <main>
-        <div class="container">
-            <h1><a href="https://ls1.ir">لینک دات آی آر</a></h1>
-            <h6>کوتاه کننده لینک</h6>
-            <div class="container Statics_container">
-                <div class="row Statics_row">
-                    <div class="col">
-                        لینک اصلی
-                    </div>
-                    <div class="col">
-                        <a target="_blank" href="@Model.Link.MainLink">@Model.Link.MainLink</a>
-                    </div>
-                </div>
-                <div class="row Statics_row">
-                    <div class="col">
-                        لینک کوتاه
-                    </div>
-                    <div class="col">
-                        <a target="_blank" href="https://ls1.ir/@Model.Link.ShortLink">@Model.Link.ShortLink</a>
-                    </div>
-                </div>
-                <div class="row Statics_row">
-                    <div class="col">
-                        تعداد بازدید
-                    </div>
-                    <div class="col">
-                        @Model.Statics.Count
-                    </div>
-                </div>
-            </div>
+<div class="container Statics_container">
+    <div class="row Statics_row">
+        <div class="col">
+            لینک اصلی
         </div>
-    </main>
-    <footer>
-        <a href="#" class="modalLink" onclick="openModal()">درباره لینک</a>
-        <a target="_blank" href="https://darianmh.ir">داریان mh</a>
-        <a target="_blank" href="https://darianteam.ir">تیم داریان</a>
-        <a target="_blank" href="https://coffeebede.ir/darianmh">یه قهوه برام بخر</a>
-    </footer>
-
-    @* modal *@
-    <div id="myModal" class="modal">
-
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <hr />
-            <p>
-                لینک دات آی آر یک محصول از
-                <b>داریان</b>
-                .محصولی ساده و روان برای خلاصه سازی لینک های شما.
-            </p>
-            <p>برای استفاده از محصول تنها کافیست لینک اصلی را در اینپوت صفحه وارد کنید. پس از فشرده کلید اینتر. لینک را از قسمت پایینی کپی کنید.</p>
-            <p>
-                همچنین شما می توانید با وارد کرد علامت '$' در بعد از لینک خلاصه شده خود. آمار بازدید لینک را نیز مشاده نمایید.
-                <span>(https://ls1/214C8$)</span>
-            </p>
-            <p>پیشاپیش از همایت های شما تشکر می کنیم.</p>
+        <div class="col">
+            <a target="_blank" href="@Model.Link.MainLink">@Model.Link.MainLink</a>
         </div>
-
     </div>
-    @* end modal *@
-    <input class="" readonly id="Short_Link" />
-
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="~/js/HomeScript.js"></script>
-</body>
-</html>
+    <div class="row Statics_row">
+        <div class="col">
+            لینک کوتاه
+        </div>
+        <div class="col">
+            <a target="_blank" href="https://ls1.ir/@Model.Link.ShortLink">@Model.Link.ShortLink</a>
+        </div>
+    </div>
+    <div class="row Statics_row">
+        <div class="col">
+            تعداد بازدید
+        </div>
+        <div class="col">
+            @Model.Statics.Count
+        </div>
+    </div>
+</div>
