--- a/LinkShortener/Views/Shared/_MyLayout.cshtml
+++ b/LinkShortener/Views/Shared/_MyLayout.cshtml
@@ -15,6 +15,7 @@
     <meta name="keywords" content="لینک, کوتاه,فشرده,خلاصه,کوتاه سازی,لینک سازی,link,link shortener,ls1,لینک دات آی آر,داریان,darian,darian mh,سئو" />
     <meta name="description" content="لینک دات آی آر یک محصول از داریان است.محصولی ساده و روان برای خلاصه سازی لینک های شما." />
     <link href="~/lib/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet" />
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/css/HomeCss.css" rel="stylesheet" asp-append-version="true" />
 </head>
 <body dir="rtl">
