Page encode fixed
By default, the HTML encoding engine will only safelist the basic latin alphabet. So we added Arabic support.

--- a/LinkShortener/Views/Rout/Index.cshtml
+++ b/LinkShortener/Views/Rout/Index.cshtml
@@ -8,6 +8,7 @@
 
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>@Model.MainLink</title>
 	<link href="~/css/LinkRedirect.css" rel="stylesheet" />
 </head>
@@ -111,7 +112,7 @@
 
 	</svg>
 	<script>
-	setTimeout(function() {
+		setTimeout(function () {
         window.location = '@Model.MainLink';
       },
       2000);
