many things changed 1- links preview for social medias 2- showing public links 3- reading header and meta tags of links for displaying somewheres 4- checking links (get request) before saving 5- sorting admin panel link and global links list

--- a/LinkShortener/Views/PublicLinks/Index.cshtml
+++ b/LinkShortener/Views/PublicLinks/Index.cshtml
@@ -1,9 +1,8 @@
-﻿@model LinkShortener.Models.Link.ShowAllLinksModel<LinkShortener.Models.Link.AdminLinkModel>
+﻿@model LinkShortener.Models.Link.ShowAllLinksModel<LinkShortener.Models.Link.GlobalLinkModel>
 
 @{
     Layout = "_MyLayout";
 }
-
 
 <div class="container Statics_container">
     <partial name="_LinkSortPartial" model="Model.SortModel" />
@@ -12,14 +11,11 @@
     @foreach (var item in Model.AllLinks)
     {
         <div class="row Statics_row">
-            <div class="col3">
-                <a target="_blank" href="@item.MainLink"> @item.MainLink</a>
+            <div class="col2">
+                <a target="_blank" href="@item.MainLink"> @item.MetaTitleModel</a>
             </div>
-            <div class="col3">
+            <div class="col2">
                 <a target="_blank" href="@item.ShortLink"> @item.ShortLink</a>
-            </div>
-            <div class="col3">
-                @item.VisitCount
             </div>
         </div>
     }
