--- a/LinkShortener/Views/PublicLinks/Index.cshtml
+++ b/LinkShortener/Views/PublicLinks/Index.cshtml
@@ -15,7 +15,8 @@
                 <a target="_blank" href="@item.MainLink"> @item.MetaTitleModel</a>
             </div>
             <div class="col2">
-                <a target="_blank" href="@item.ShortLink"> @item.ShortLink</a>
+                @{ var link = $"{item.ShortLink}%24";}
+                <a target="_blank" href="@link"> @item.ShortLink</a>
             </div>
         </div>
     }
