site description in statics view

--- a/LinkShortener/Views/Shared/_MyLayout.cshtml
+++ b/LinkShortener/Views/Shared/_MyLayout.cshtml
@@ -3,6 +3,7 @@
 *@
 @{
     Layout = null;
+    var description = ViewData["description"];
 }
 
 <!DOCTYPE html>
@@ -13,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>داریان - لینک دات آی آر</title>
     <meta name="keywords" content="لینک, کوتاه,فشرده,خلاصه,کوتاه سازی,لینک سازی,link,link shortener,ls1,لینک دات آی آر,داریان,darian,darian mh,سئو" />
-    <meta name="description" content="لینک دات آی آر یک محصول از داریان است.محصولی ساده و روان برای خلاصه سازی لینک های شما." />
+    <meta name="description" content="لینک دات آی آر یک محصول از داریان است.محصولی ساده و روان برای خلاصه سازی لینک های شما. -@description" />
     <link href="~/lib/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet" />
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/css/HomeCss.css" rel="stylesheet" asp-append-version="true" />
