--- a/LinkShortener/Views/PublicLinks/Index.cshtml
+++ b/LinkShortener/Views/PublicLinks/Index.cshtml
@@ -8,18 +8,22 @@
     <partial name="_LinkSortPartial" model="Model.SortModel" />
     <partial name="_LinkPagingPartial" model="Model.SortModel" />
     <hr />
+    @{
+        var count = 1;
+    }
     @foreach (var item in Model.AllLinks)
     {
         <div class="row Statics_row">
             <div class="col2">
-                <a target="_blank" href="@item.MainLink"> @item.MetaTitleModel</a>
+                <a target="_blank" href="@item.MainLink"><u>#@count</u>&nbsp;@item.MetaTitleModel</a>
             </div>
             <div class="col2">
                 @{ var link = $"{item.ShortLink}%24";}
                 <a target="_blank" href="@link"> @item.ShortLink</a>
             </div>
         </div>
-    }
+                        count++;
+                    }
     <hr />
     <partial name="_LinkPagingPartial" model="Model.SortModel" />
 </div>
