error log added -statics report bugs fixed

--- a/LinkShortener/Views/Rout/Statics.cshtml
+++ b/LinkShortener/Views/Rout/Statics.cshtml
@@ -3,7 +3,10 @@
 
 @{
     Layout = "_MyLayout";
-    ViewData["description"] = string.Join("", Model.Link.Description.Take(35)) + "...";
+    if (!string.IsNullOrEmpty(Model.Link.Description))
+    {
+        ViewData["description"] = string.Join("", Model.Link.Description.Take(35)) + "...";
+    }
 }
 
 
